Configurações de banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 server.port=8081
 server.servlet.context-path=/
 
-spring.datasource.url=jdbc:h2:mem:gradecurricular
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=rsystem
-spring.datasource.password=rsystem
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${DATABASE_URL}
