--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.rss.cliente.escola</groupId>
 	<artifactId>grade-curricular</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>grade-curricular</name>
 	<description>Projeto de grade curricular</description>
 
